styles/globals.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

:root {
	--bg: #010409;
	--fg: #ffffff;
}

*,
body,
html {
	padding: 0;
	margin: 0;
	user-select: none;
}

body,
html,
#__next {
	background-color: var(--bg);
	color: var(--fg);
	font-family: 'Roboto', sans-serif;

	height: 100%;
	width: 100%;
}

.clickable {
	transition: background 0.075s;
	border-radius: 2px;

	&:hover {
		cursor: pointer;
		background: rgba(255, 0, 255, 0.3);
	}

	&Link {
		color: magenta;
		border-radius: 2px;
		padding: 4px;
		margin-left: -4px;
		&:hover {
			cursor: pointer;
			background: rgba(255, 0, 255, 0.3);
		}
	}
}

.socialIcon {
	transition: color 0.125s;

	&:hover {
		color: magenta;
	}
}

a {
	color: white;
	text-decoration: none;
}

p,
span {
	font-size: 18px;
}

